--- a/style.css
+++ b/style.css
@@ -2,6 +2,43 @@
     box-sizing: border-box;
 }
 
+/*This is for the flexbox of the gridlist*/
+.flexbox {
+  display: flex;
+ flex-flow: row wrap;
+ justify-content: center;
+ align-content: space-around;
+ margin-top: 10px;
+ gap: 10px;
+}
+
+#nPhotos {
+   width: 250px;
+   height: 250px;
+   margin: 10px  8px 20px;
+   box-shadow: 4px 3px 2px rgba(0,0,0,0.2);
+   position: -200px;
+}
+.names {
+   font-size: 1.2em;
+   padding: 8px;
+   margin: 8px;
+}
+.mainDisplayText {
+   text-align: center;
+   font-size: 2.5em;
+   margin-top: 40px;
+   margin-bottom: 15px;
+}
+.mainSubhead {
+   text-align: center;
+   font-size: 1.2em;
+   padding: 5px;
+   margin-bottom: 100px;
+}
+
+
+/*Styling to the body*/
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
