--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ html {
    width: 250px;
    height: 250px;
    margin: 10px  8px 20px;
-   box-shadow: 4px 3px 2px rgba(0,0,0,0.2);
    position: -200px;
 }
 .names {
-   font-size: 1.2em;
+   font-size: 1.7em;
+   word-wrap: break-word;
    padding: 8px;
    margin: 8px;
 }
@@ -164,14 +164,16 @@ after { clear: both; }
   padding-top: 8px;
 }
 
-label {
-padding: 2px;
+.names {
+  font-size: 0.8em;
+  padding: 1px 0 2px 0;
 }
 
 .fboxitem {
   background-color: white;
   border: 1px solid black 0.2;
   margin: 0 0 1rem 0;
+  box-shadow: 4px 3px 2px rgba(0,0,0,0.2);
 }
 
 .login-form input[type="date"] {
