--- a/style.css
+++ b/style.css
@@ -91,6 +91,34 @@ body {
   .topnav .icon {
     display: none;
   }
+
+  .flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 8rem;
+  }
+
+  .profile-photo {
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+  }
+
+  .username-title {
+    margin: -1.3rem;
+    padding: 1rem;
+  }
+
+  .Profile {
+    display: flex;
+    text-align: center;
+  }
+
+  .UserInfo {
+    border: 1px solid black;
+    margin: 1rem;
+  }
   
  .btn {
   padding: 15px 25px;
