--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html {
   display: flex;
  flex-flow: row wrap;
  justify-content: center;
- align-content: space-around;
  margin-top: 10px;
  gap: 10px;
 }
@@ -18,15 +17,10 @@ html {
 #nPhotos {
    width: 250px;
    height: 250px;
-   margin: 10px  8px 20px;
+   margin: 20px 25px;
    position: -200px;
 }
-.names {
-   font-size: 1.7em;
-   word-wrap: break-word;
-   padding: 8px;
-   margin: 8px;
-}
+
 .mainDisplayText {
    text-align: center;
    font-size: 2.5em;
@@ -44,11 +38,8 @@ html {
 /*Styling to the body*/
 body {
     margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: rgb(235,212,153);
-    background: linear-gradient(174deg, rgb(253, 246, 239) 0%, rgb(253, 251, 245) 40%, rgba(115,168,243,1) 100%);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    font-family: Montserrat, sans-serif;
+    background: rgb(4, 1, 26);
     height: 100%;
     margin: 0;
   }
@@ -63,10 +54,7 @@ body {
     background-color: #05122c;
   }
 
- .logo {
-     float: right;
-     margin-right: 20px;
- } 
+
 
   .topnav a {
     float: left;
@@ -78,20 +66,7 @@ body {
     font-size: 17px;
   }
 
-  .topnav a:hover {
-    background-color: #163470;
-    color: white;
-  }
-  
-  .topnav a.active {
-    background-color: #ffaaaa;
-    color: #05122c;
-  }
-  
-  .topnav .icon {
-    display: none;
-  }
-
+ 
   .flex-container {
     display: flex;
     flex-direction: row;
@@ -120,14 +95,7 @@ body {
     margin: 1rem;
   }
   
- .btn {
-  padding: 15px 25px;
-  margin-left:  80px;
-  margin-bottom: 100px;
-  color: white;
-  background-color: #05122c;
-  }
-/* This is for the contact page*/
+
 .Hero {
  display: block;
  width: 100%;
@@ -194,13 +162,16 @@ after { clear: both; }
 
 .names {
   font-size: 0.8em;
+  word-wrap: break-word;
   padding: 1px 0 2px 0;
+  margin-left: 24px;
+  margin-bottom: 20px;
 }
 
 .fboxitem {
+  align-items: center;
   background-color: white;
   border: 1px solid black 0.2;
-  margin: 0 0 1rem 0;
   box-shadow: 4px 3px 2px rgba(0,0,0,0.2);
 }
 
@@ -218,11 +189,11 @@ after { clear: both; }
 .login form input[type="text"] {
   background-color: #3b4148;
   border-radius: 0px 3px 3px 0px;
-  color: #a9a9a9;
+  color: #a35353;
   margin-bottom: 1rem;
   margin-left: 1em;
   padding: 0 16px;
-  width: 90%;
+  width: 75%;
   height: 50px;
 }
 
