--- a/main.css
+++ b/main.css
@@ -139,6 +139,7 @@ span {
     margin-top: 25px;
     opacity: 0.9;
 }
+
 .link-btn:hover {
 	  transform: scale(1.16);
     background-color: #d1313e;
@@ -188,6 +189,46 @@ span {
     font-weight: 300;
     font-size: 1.5em;
 }
+.lowCap {
+  color: white;
+  font-size: 3em;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+.lowCap1 {
+  color: black;
+  font-size: 3em;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+.para {
+  margin-left: 4rem;;
+  margin-right: 4rem;
+  margin-bottom: 2rem;
+  font-size: 1.2em;
+}
+.para1 {
+  margin-top: 6rem;
+  margin-left: 6rem;;
+  margin-right: 6rem;
+  margin-bottom: 2rem;
+  font-size: 1.8em;
+}
+h3 {
+  font-size: 2em;
+  padding: 4rem;
+  font-family: Montserrat, sans-serif;
+  font-weight: 300;
+}
+
+.p-color {
+  background-color: #061a69;
+  width: 91vw;
+  color: white;
+  padding: 2rem;
+  margin-top: -8rem;
+  padding-bottom: 2rem;
+}
 /* Flex Containers */
 .even-cols {
   display: flex;
@@ -201,11 +242,47 @@ span {
   height: 95vh;
   max-width: 100%;
 }
+.hero-img {
+  position: relative;
+  margin-left: 4rem;
+  margin-right: rem;
+  width: 91vw;
+  height: auto;
+  max-width: 100%;
+  max-height: min-content;
+  display: inline-block;
+}
 
+.image-text {
+  position: absolute;
+}
+.Photo-text {
+  font-size: 3.5em;
+  color: #57f18a;
+  position: relative;
+  margin-left: 6rem;
+  bottom: 12rem;
+}
+.Subhead1 {
+  font-family: Montserrat, sans-serif;
+  text-shadow: 3px 2px #010f0a;
+  margin-left: 6rem;
+  font-weight: 100;
+  color: white;
+  padding: 8px;
+  position: relative;
+  font-size: 1.4em;
+  bottom: 10rem;
+}
+figcaption {
+  font-size: 1.4em;
+  text-align: center;
+}
 /* Form Stylings */
 #mySearch input[type=text] {
   width: 80%;
   margin-left: 6rem;
+  margin-bottom:  -8rem;
 }
 #searchBtn {
   padding: 10px 24px;
@@ -214,6 +291,16 @@ span {
   color: white;
   font-size: 0.9em;
   font-family: Montserrat, sans-serif;
+}
+.category  {
+  float: right;
+}
+footer {
+  width: 100vw;
+  height: 10vh;
+  padding-top: 60px;
+  padding-left: 20px;
+  background-color: #010f0a;
 }
 
 /* Media Queries */
@@ -256,6 +343,28 @@ span {
   .photo1 {
     width: 100%;
     height: auto;
+  }
+  .hero-img {
+    width: 100%;
+    height: auto;
+  }
+  .color-pop {
+    text-align: center;
+    font-size: 10px;
+  }
+  h3 .Subhead1 {
+    text-align: center;
+    font-size: 5px;
+    left: 2px;
+    margin-left: -8rem;
+  }
+  .Photo-text {
+    text-align: center;
+    font-size: 1.3em;
+    display: inline-block;
+  }
+  .para1 {
+    font-size: 5px;
   }
 }
 
