--- a/formLogin.css
+++ b/formLogin.css
@@ -1,5 +1,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
+form {
+  border: 1px solid #1f1f2042;
+}
 
 .errorMessage {
     display: flex;
@@ -13,6 +15,27 @@ form {border: 3px solid #f1f1f1;}
     text-align: center;
     text-decoration: underline; 
 }
+
+.Bg-img {
+  background-image: url(src/images/pexels-tyler-lastovich-937782.jpg);
+  background-attachment: fixed;
+  max-width: 100%;
+  height: auto;
+  opacity: 0.8;
+}
+
+form {
+  width: 50%;
+  margin: auto;
+  height: 90vh;
+  color: rgb(255, 255, 255);
+  font-size: 1.4em;
+  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  background-color: rgba(99, 17, 37, 0.205);
+}
+
+
 
 .hide {
     display: none;
@@ -29,9 +52,11 @@ input[type=text], input[type=password] {
 }
 
 button {
-  background-color: #04AA6D;
+  background-color: #491240;
   color: white;
-  padding: 14px 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2em;
+  padding: 12px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
@@ -40,23 +65,23 @@ button {
 }
 
 button:hover {
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 .cancelbtn {
   width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
+  font-size: 1.2em;
+  padding: 12px 34px;
+  background-color: #4bb967;
 }
 
 .imgcontainer {
   text-align: center;
-  margin: 20px 0 12px 0;
+  margin: 24px 0 12px 0;
 }
 
 img.avatar {
-  width: 40%;
-  height: 400px;
+  width: 30%;
   border-radius: 100%;
 }
 
@@ -66,6 +91,8 @@ img.avatar {
 
 span.psw {
   float: right;
+  font-size: 1.2em;
+  color: #0e011a;
   padding-top: 16px;
 }
 
