--- a/main.css
+++ b/main.css
@@ -125,6 +125,40 @@ span {
   border-radius: 5px;
   border: #021569;
 }
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 18px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #05122c;
+  color: #57f18a;
+  padding: 12px 28px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #4bfdb9;
+  font-weight: 600;
+  color: #05122c;
+}
+
+.contact-form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+
 .link-btn {
     display: inline-block;
     padding: 20px 40px;
