--- a/users.css
+++ b/users.css
@@ -94,6 +94,20 @@ tr {
 #userDiv input[type=text] {
    padding: 10px 14px;
    width: 25%;
-
+   text-align: left;
 }
 
+.title {
+    margin-left: 1rem;
+    width: 50%;
+    padding: 20px;
+}
+
+h1 {
+    margin-left: 1rem;
+}
+
+.author {
+    width: 50%;
+    margin-left: 1rem;
+}
